--- a/index.html
+++ b/index.html
@@ -1,25 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atlantis</title>
-    <style>
-        body {
-            background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
-</head>
-<body>
-    <img src="https://i.imgur.com/J7LvnoI.gif" alt="Centered GIF">
-</body>
-</html>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=3.0" name="viewport">
+<meta name="description" content="Check out the 25ms community on Discord - hang out with 12514 other members and enjoy free voice and text chat." />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@discord" />
+<meta name="twitter:title" content="Join the 25ms Discord Server!" />
+<meta name="twitter:description" content="Check out the 25ms community on Discord - hang out with 12514 other members and enjoy free voice and text chat." />
+<meta property="og:title" content="Join the 25ms Discord Server!" />
+<meta property="og:url" content="https://discord.com/invite/25ms" />
+<meta property="og:description" content="Check out the 25ms community on Discord - hang out with 12514 other members and enjoy free voice and text chat." />
+<meta property="og:site_name" content="Discord" />
+<link rel="canonical" href="https://discord.com/invite/25ms" />
+<meta property="og:locale:alternate" content="cs" />
+<meta property="og:locale:alternate" content="sv-SE" />
+<meta property="og:locale:alternate" content="th" />
+<meta property="og:locale:alternate" content="id" />
+<meta property="og:locale:alternate" content="da" />
+<meta property="og:locale:alternate" content="ru" />
+<meta property="og:locale:alternate" content="zh-CN" />
+<meta property="og:locale:alternate" content="ro" />
+<meta property="og:locale:alternate" content="hi" />
+<meta property="og:locale:alternate" content="zh-TW" />
+<meta property="og:locale:alternate" content="it" />
+<meta property="og:locale:alternate" content="en-GB" />
+<meta property="og:locale:alternate" content="fi" />
+<meta property="og:locale:alternate" content="ko" />
+<meta property="og:locale:alternate" content="fr" />
+<meta property="og:locale:alternate" content="nl" />
+<meta property="og:locale" content="en-US" />
+<meta property="og:locale:alternate" content="tr" />
+<meta property="og:locale:alternate" content="he" />
+<meta property="og:locale:alternate" content="uk" />
+<meta property="og:locale:alternate" content="hr" />
+<meta property="og:locale:alternate" content="el" />
+<meta property="og:locale:alternate" content="es-419" />
+<meta property="og:locale:alternate" content="bg" />
+<meta property="og:locale:alternate" content="ar" />
+<meta property="og:locale:alternate" content="pt-BR" />
+<meta property="og:locale:alternate" content="no" />
+<meta property="og:locale:alternate" content="pl" />
+<meta property="og:locale:alternate" content="ja" />
+<meta property="og:locale:alternate" content="de" />
+<meta property="og:locale:alternate" content="es-ES" />
+<meta property="og:locale:alternate" content="vi" />
+<meta property="og:locale:alternate" content="lt" />
+<meta property="og:locale:alternate" content="hu" />
+<meta rel="alternate" hreflang="cs" href="https://discord.com/invite/25ms?locale=cs" />
+<meta rel="alternate" hreflang="sv-SE" href="https://discord.com/invite/25ms?locale=sv-SE" />
+<meta rel="alternate" hreflang="th" href="https://discord.com/invite/25ms?locale=th" />
+<meta rel="alternate" hreflang="id" href="https://discord.com/invite/25ms?locale=id" />
+<meta rel="alternate" hreflang="da" href="https://discord.com/invite/25ms?locale=da" />
+<meta rel="alternate" hreflang="ru" href="https://discord.com/invite/25ms?locale=ru" />
+<meta rel="alternate" hreflang="zh-CN" href="https://discord.com/invite/25ms?locale=zh-CN" />
+<meta rel="alternate" hreflang="ro" href="https://discord.com/invite/25ms?locale=ro" />
+<meta rel="alternate" hreflang="hi" href="https://discord.com/invite/25ms?locale=hi" />
+<meta rel="alternate" hreflang="zh-TW" href="https://discord.com/invite/25ms?locale=zh-TW" />
+<meta rel="alternate" hreflang="it" href="https://discord.com/invite/25ms?locale=it" />
+<meta rel="alternate" hreflang="en-GB" href="https://discord.com/invite/25ms?locale=en-GB" />
+<meta rel="alternate" hreflang="fi" href="https://discord.com/invite/25ms?locale=fi" />
+<meta rel="alternate" hreflang="ko" href="https://discord.com/invite/25ms?locale=ko" />
+<meta rel="alternate" hreflang="fr" href="https://discord.com/invite/25ms?locale=fr" />
+<meta rel="alternate" hreflang="nl" href="https://discord.com/invite/25ms?locale=nl" />
+<meta rel="alternate" hreflang="en-US" href="https://discord.com/invite/25ms?locale=en-US" />
+<meta rel="alternate" hreflang="tr" href="https://discord.com/invite/25ms?locale=tr" />
+<meta rel="alternate" hreflang="he" href="https://discord.com/invite/25ms?locale=he" />
+<meta rel="alternate" hreflang="uk" href="https://discord.com/invite/25ms?locale=uk" />
+<meta rel="alternate" hreflang="hr" href="https://discord.com/invite/25ms?locale=hr" />
+<meta rel="alternate" hreflang="el" href="https://discord.com/invite/25ms?locale=el" />
+<meta rel="alternate" hreflang="es-419" href="https://discord.com/invite/25ms?locale=es-419" />
+<meta rel="alternate" hreflang="bg" href="https://discord.com/invite/25ms?locale=bg" />
+<meta rel="alternate" hreflang="ar" href="https://discord.com/invite/25ms?locale=ar" />
+<meta rel="alternate" hreflang="pt-BR" href="https://discord.com/invite/25ms?locale=pt-BR" />
+<meta rel="alternate" hreflang="no" href="https://discord.com/invite/25ms?locale=no" />
+<meta rel="alternate" hreflang="pl" href="https://discord.com/invite/25ms?locale=pl" />
+<meta rel="alternate" hreflang="ja" href="https://discord.com/invite/25ms?locale=ja" />
+<meta rel="alternate" hreflang="de" href="https://discord.com/invite/25ms?locale=de" />
+<meta rel="alternate" hreflang="es-ES" href="https://discord.com/invite/25ms?locale=es-ES" />
+<meta rel="alternate" hreflang="vi" href="https://discord.com/invite/25ms?locale=vi" />
+<meta rel="alternate" hreflang="lt" href="https://discord.com/invite/25ms?locale=lt" />
+<meta rel="alternate" hreflang="hu" href="https://discord.com/invite/25ms?locale=hu" />
+<meta property="og:image" content="https://cdn.discordapp.com/splashes/1306714913539887237/d9a1ef91e3e77ecfaecd00a230a507e9.jpg?size=512" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="512" />
+<meta property="og:image:height" content="512" />
+<meta property="twitter:image" content="https://cdn.discordapp.com/splashes/1306714913539887237/d9a1ef91e3e77ecfaecd00a230a507e9.jpg?size=512" />
+<meta name="googlebot" content="noindex, nofollow" />
+<meta name="bingbot" content="noindex, nofollow" />
+<meta name="slurp" content="noindex, nofollow" />
+<meta name="duckduckbot" content="noindex, nofollow" />
+<meta name="baiduspider" content="noindex, nofollow" />
+<meta name="yandexbot" content="noindex, nofollow" />
+<meta name="naver" content="noindex, nofollow" />
+<meta name="facebookexternalhit" content="index, follow" />
+<meta name="twitterbot" content="index, follow" />
+
+    <script nonce="MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx">window.GLOBAL_ENV = {"NODE_ENV":"production","BUILT_AT":"1743146326817","HTML_TIMESTAMP":Date.now(),"BUILD_NUMBER":"383453","PROJECT_ENV":"production","RELEASE_CHANNEL":"stable","VERSION_HASH":"95ee19143be8db2c5cade2a82f733f37ec821bb7","PRIMARY_DOMAIN":"discord.com","SENTRY_TAGS":{"buildId":"95ee19143be8db2c5cade2a82f733f37ec821bb7","buildType":"normal"},"SENTRY_RELEASE":"2025-03-28-95ee19143be8db2c5cade2a82f733f37ec821bb7-discord_web","PUBLIC_PATH":"/assets/","LOCATION":"history","API_VERSION":9,"API_PROTOCOL":"https:","API_ENDPOINT":"//discord.com/api","GATEWAY_ENDPOINT":"wss://gateway.discord.gg","STATIC_ENDPOINT":"","ASSET_ENDPOINT":"//discord.com","MEDIA_PROXY_ENDPOINT":"//media.discordapp.net","IMAGE_PROXY_ENDPOINTS":"//images-ext-1.discordapp.net,//images-ext-2.discordapp.net","CDN_HOST":"cdn.discordapp.com","DEVELOPERS_ENDPOINT":"//discord.com","MARKETING_ENDPOINT":"//discord.com","WEBAPP_ENDPOINT":"//discord.com","WIDGET_ENDPOINT":"//discord.com/widget","SEO_ENDPOINT":"undefined","NETWORKING_ENDPOINT":"//router.discordapp.net","REMOTE_AUTH_ENDPOINT":"//remote-auth-gateway.discord.gg","RTC_LATENCY_ENDPOINT":"//latency.discord.media/rtc","INVITE_HOST":"discord.gg","GUILD_TEMPLATE_HOST":"discord.new","GIFT_CODE_HOST":"discord.gift","ACTIVITY_APPLICATION_HOST":"discordsays.com","MIGRATION_SOURCE_ORIGIN":"https://discordapp.com","MIGRATION_DESTINATION_ORIGIN":"https://discord.com","STRIPE_KEY":"pk_live_CUQtlpQUF0vufWpnpUmQvcdi","ADYEN_KEY":"live_E3OQ33V6GVGTXOVQZEAFQJ6DJIDVG6SY","BRAINTREE_KEY":"production_ktzp8hfp_49pp2rp4phym7387","DEV_SESSION_KEY":"undefined"}</script>
+    <script nonce="MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx">!function(){if(null!=window.WebSocket&&function(n){try{var o=localStorage.getItem(n);if(null==o)return null;return JSON.parse(o)}catch(e){return null}}("token")&&!window.__OVERLAY__){var n=null!=window.DiscordNative||null!=window.require?"etf":"json",o=window.GLOBAL_ENV.GATEWAY_ENDPOINT+"/?encoding="+n+"&v="+window.GLOBAL_ENV.API_VERSION;null!=window.DiscordNative&&void 0!==window.Uint8Array&&void 0!==window.TextDecoder?o+="&compress=zstd-stream":void 0!==window.Uint8Array&&(o+="&compress=zlib-stream"),console.log("[FAST CONNECT] "+o+", encoding: "+n+", version: "+window.GLOBAL_ENV.API_VERSION);var e=new WebSocket(o);e.binaryType="arraybuffer";var i=Date.now(),r={open:!1,identify:!1,gateway:o,messages:[]};e.onopen=function(){console.log("[FAST CONNECT] connected in "+(Date.now()-i)+"ms"),r.open=!0},e.onclose=e.onerror=function(){window._ws=null},e.onmessage=function(n){r.messages.push(n)},window._ws={ws:e,state:r}}}();</script>
+<title>25ms</title>  <script nonce="MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx">
+            window.__OVERLAY__ = /overlay/.test(location.pathname);
+            window.__BILLING_STANDALONE__ = /^\/billing/.test(location.pathname);
+          </script><link href="/assets/favicon.ico" rel="icon"><link href="/assets/69646.c300f02770dd171a.css" rel="stylesheet"></head>
+
+  <body>
+    <div id="app-mount"></div>
+  
+
+<script defer src="/assets/webMinimal.a87d243f3820bd7c.js"></script><script defer src="/assets/sentry.44de9cf75f61a2ae.js"></script><script nonce="MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx">(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.nonce='MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx';d.innerHTML="window.__CF$cv$params={r:'9288b85d4c81ed48',t:'MTc0MzM0OTM4MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='MjU1LDE1NSwyMTEsMTc4LDExMywxMjgsNDUsMjAx';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body></html>
