--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static URL Shortener</title>
+    <title>invite nigger</title>
 </head>
 <body>
-    <h1>Static URL Shortener</h1>
+    <h1>who doesnt like females</h1>
     <form id="url-form">
-        <label for="url">Enter your long URL:</label>
+        <label for="url">enter ur shit:</label>
         <input type="text" id="url" required>
-        <button type="submit">Shorten URL</button>
+        <button type="submit">rape discord</button>
     </form>
     
-    <h2>Shortened URL</h2>
+    <h2>post trauma discord</h2>
     <p id="short-url"></p>
 
-    <h3>Use this shortened link:</h3>
+    <h3>use ts pmo:</h3>
     <input type="text" id="generated-link" readonly>
 
     <script>
@@ -42,7 +42,7 @@
             event.preventDefault();
             const longUrl = document.getElementById('url').value;
             const shortCode = generateShortCode();
-            const shortUrl = `http://127.0.0.1:5500/${shortCode}`; // You can replace this with your actual domain if deployed
+            const shortUrl = `https://awp.pub/${shortCode}`; // You can replace this with your actual domain if deployed
 
             // Save the mapping in localStorage
             saveURLMapping(shortCode, longUrl);
