--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>invite nigger</title>
+    <title>invite raper</title>
 </head>
 <body>
-    <h1>who doesnt like females</h1>
+    <h1>tuffest invite thingy</h1>
     <form id="url-form">
-        <label for="url">enter ur shit:</label>
+        <label for="url">invite here:</label>
         <input type="text" id="url" required>
         <button type="submit">rape discord</button>
     </form>
-    
-    <h2>post trauma discord</h2>
+
+    <h2>discord after rape</h2>
     <p id="short-url"></p>
 
-    <h3>use ts pmo:</h3>
+    <h3>now pmo with this:</h3>
     <input type="text" id="generated-link" readonly>
 
     <script>
-        // Generate a random short URL code
+        // This will act as our in-memory 'database'
+        const urlMappings = {};
+
+        // Generate a random short code
         function generateShortCode() {
             const chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
             let shortCode = "";
@@ -30,9 +33,8 @@
             return shortCode;
         }
 
-        // Save the URL mapping in local storage
+        // Save the URL mapping in localStorage
         function saveURLMapping(shortCode, longUrl) {
-            let urlMappings = JSON.parse(localStorage.getItem("urlMappings")) || {};
             urlMappings[shortCode] = longUrl;
             localStorage.setItem("urlMappings", JSON.stringify(urlMappings));
         }
@@ -42,23 +44,24 @@
             event.preventDefault();
             const longUrl = document.getElementById('url').value;
             const shortCode = generateShortCode();
-            const shortUrl = `https://awp.pub/${shortCode}`; // You can replace this with your actual domain if deployed
+            const shortUrl = `/${shortCode}`; // Use relative path
 
             // Save the mapping in localStorage
             saveURLMapping(shortCode, longUrl);
 
             // Display the shortened URL
-            document.getElementById('short-url').textContent = shortUrl;
-            document.getElementById('generated-link').value = shortUrl;
+            document.getElementById('short-url').textContent = `http://awp.pub${shortUrl}`;
+            document.getElementById('generated-link').value = `http://awp.pub${shortUrl}`;
         });
 
-        // Handle the short link redirection
+        // Handle routing for different short links
         window.onload = function() {
-            const path = window.location.pathname.substring(1);
-            const urlMappings = JSON.parse(localStorage.getItem("urlMappings")) || {};
+            // Grab the path after the domain
+            const path = window.location.pathname.substring(1); // Remove leading slash
+            const savedMappings = JSON.parse(localStorage.getItem("urlMappings")) || {};
 
-            if (urlMappings[path]) {
-                window.location.href = urlMappings[path]; // Redirect to the original URL
+            if (savedMappings[path]) {
+                window.location.href = savedMappings[path]; // Redirect to the original URL
             }
         }
     </script>
